--- a/Kevins Dumme Website/css/hindex.css
+++ b/Kevins Dumme Website/css/hindex.css
@@ -6,6 +6,7 @@ h1 {
   color: white;
   /*font-family: 'Anton', sans-serif;*/
   font-family: 'Pacifico', cursive;
+  text-shadow: 5px 3px pink;
   text-align:center;
   /*background-color:DodgerBlue; */
   font-size:100px;
@@ -29,16 +30,25 @@ h1 {
   margin: 25px;
 } */
 
-#title{
-  background-color: white;
 
-
-
+#navbar{
+  color: white;
+  text-align: center;
+  background-color: pink;
+  width: 250px;
+  height: 50px;
+  margin: auto;
+  padding: 25px 150px 50px 150px; /* top right bottom left */
+  border-radius: 15px;
 }
+
+
 
 #content{
   background-color: white;
-  margin: auto;
-  padding: 20px 75px 50px 50px; /* top right bottom left */
-  padding: 25px 50px 75px 100px;
+  width: 250px;
+  height: 250px;
+  margin: 20px auto 50px auto;
+  padding: 50px 150px 50px 150px; /* top right bottom left */
+  border-radius: 25px;
 }
